--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <nav class="gnb">
           <ul class="gnb-list">
             <li class="gnb-item on">
-              <a href="">!!HW!!</a>
+              <a href="#main">!!HW!!</a>
             </li>
             <li class="gnb-item">
-              <a href="">ABOUT</a>
+              <a href="#about">ABOUT</a>
             </li>
             <li class="gnb-item">
-              <a href="">WORKS</a>
+              <a href="#asdas">WORKS</a>
             </li>
             <li class="gnb-item">
-              <a href="">CONTACT</a>
+              <a href="#asdas">CONTACT</a>
             </li>
           </ul>
         </nav>
@@ -33,7 +33,7 @@
 
       <main>
         <!-- MAIN -->
-        <section class="sc-main">
+        <section class="sc-main" id="main">
           <div class="main-txt">
             <div class="txt-box">
               <p class="txt"><span>Publisher</span></p>
@@ -50,7 +50,7 @@
         </section>
 
         <!-- ABOUT -->
-        <section class="sc-about">
+        <section class="sc-about" id="about">
           <h2 class="title">ABOUT SKILLS</h2>
           <div class="sticker-box">
             <img src="./assets/img/sticker1.png" alt />
@@ -205,6 +205,7 @@
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollToPlugin.min.js"></script>
 
   <script src="./assets/js/gsap.js"></script>
   <script src="./assets/js/main.js"></script>
